[CSS Env Vars] Throw parse error when used with min/max

min() and max() are not supported and should throw a parse
error when used with env() and var().

BUG=864435

Change-Id: I7e89607cc6bb41910131b35a72dabb979f10b7dc
Reviewed-on: https://chromium-review.googlesource.com/1140746
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575871}
Former-commit-id: 113cc2d54f97a1384ecc5c3a0b8bcddbd0c3765f